--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -28,6 +28,7 @@ on:
 
 env:
   VERBOSE: ${{ inputs.verbose && 'true' || '' }}
+  BRANCH: ${{ inputs.branch }}
 
 jobs:
   parameters:
@@ -94,7 +95,7 @@ jobs:
       matrix: ${{ env.matrix }}
       jdk_build: ${{ env.JDK_BUILD }}
       jre_version: ${{ env.JRE_DEFAULT }}
-  scale-runners:
+  scale-runners-up:
     if: ${{ inputs.scale }}
     runs-on: ubuntu-latest
     needs:
@@ -156,6 +157,7 @@ jobs:
     needs:
       - core
       - parameters
+      - scale-runners-up
     strategy:
       fail-fast: false
       matrix:
@@ -199,6 +201,7 @@ jobs:
     needs:
       - core
       - parameters
+      - scale-runners-up
     strategy:
       fail-fast: false
       matrix:
@@ -242,6 +245,7 @@ jobs:
     needs:
       - core
       - parameters
+      - scale-runners-up
     strategy:
       fail-fast: false
       # will be removed when private runners are used.
