--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -121,9 +121,18 @@ jobs:
         shell: bash
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
       - name: 'Configure: Install Java'
+        if: ${{ needs.parameters.outputs.jdk_build == '8' }}
         uses: actions/setup-java@v1
         with:
           java-version: ${{ needs.parameters.outputs.jdk_build }}
+      - name: 'Configure: Install GraalVM'
+        if: ${{ needs.parameters.outputs.jdk_build != '8' }}
+        uses: graalvm/setup-graalvm@v1
+        with:
+          version: '22.3'
+          java-version: ${{ needs.parameters.outputs.jdk_build }}
+#          components: 'native-image' # add when starting native builds.
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
         run: sudo apt-get install -q -y xsltproc
       - name: 'Action: build initial dependencies'
@@ -175,9 +184,18 @@ jobs:
         shell: bash
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
       - name: 'Configure: Install Java'
+        if: ${{ needs.parameters.outputs.jdk_build == '8' }}
         uses: actions/setup-java@v1
         with:
           java-version: ${{ needs.parameters.outputs.jdk_build }}
+      - name: 'Configure: Install GraalVM'
+        if: ${{ needs.parameters.outputs.jdk_build != '8' }}
+        uses: graalvm/setup-graalvm@v1
+        with:
+          version: '22.3'
+          java-version: ${{ needs.parameters.outputs.jdk_build }}
+          #          components: 'native-image' # add when starting native builds.
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
         run: sudo apt-get install -q -y xsltproc
       - name: 'Configure: Install Pack'
@@ -223,9 +241,18 @@ jobs:
         shell: bash
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
       - name: 'Configure: Install Java'
+        if: ${{ needs.parameters.outputs.jdk_build == '8' }}
         uses: actions/setup-java@v1
         with:
           java-version: ${{ needs.parameters.outputs.jdk_build }}
+      - name: 'Configure: Install GraalVM'
+        if: ${{ needs.parameters.outputs.jdk_build != '8' }}
+        uses: graalvm/setup-graalvm@v1
+        with:
+          version: '22.3'
+          java-version: ${{ needs.parameters.outputs.jdk_build }}
+          #          components: 'native-image' # add when starting native builds.
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
         run: sudo apt-get install -q -y xsltproc
       - name: 'Configure: Install Pack'
@@ -272,9 +299,18 @@ jobs:
         shell: bash
         run: find . -type f -name "*.sh" -exec chmod a+x '{}' \;
       - name: 'Configure: Install Java'
+        if: ${{ needs.parameters.outputs.jdk_build == '8' }}
         uses: actions/setup-java@v1
         with:
           java-version: ${{ needs.parameters.outputs.jdk_build }}
+      - name: 'Configure: Install GraalVM'
+        if: ${{ needs.parameters.outputs.jdk_build != '8' }}
+        uses: graalvm/setup-graalvm@v1
+        with:
+          version: '22.3'
+          java-version: ${{ needs.parameters.outputs.jdk_build }}
+          #          components: 'native-image' # add when starting native builds.
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
         run: sudo apt-get install -q -y xsltproc
       - name: 'Configure: Install Pack'
