--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -110,6 +110,7 @@ jobs:
 #          max_parallel: ${{ toJson(needs.parameters.outputs.max_parallel) }}
   core:
     runs-on: ubuntu-latest
+#    runs-on: 'stream-ci-large'
     needs:
       - parameters
     steps:
@@ -341,8 +342,6 @@ jobs:
 #    runs-on: ubuntu-latest
 #    needs:
 #      - parameters
-#      - scale-runners-up
-#      - core
 #      - processors
 #      - sinks
 #      - sources
