[Github Actions] Add back in add-opens
This was removed in https://github.com/spring-cloud/stream-applications/commit/212ba6c860476612da60c3a689194fcf22de63af
but gmaven-plugin fails w/o the add-opens

--- a/.mvn/jvm.config
+++ b/.mvn/jvm.config
@@ -1,2 +1,1 @@
--Xmx2048m -Djava.security.egd=file:/dev/./urandom
-
+-Xmx2048m -Djava.security.egd=file:/dev/./urandom --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
