--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -183,7 +183,7 @@ jobs:
         if: ${{ needs.parameters.outputs.jdk_build != '8' }}
         uses: graalvm/setup-graalvm@v1
         with:
-          version: '22.3'
+#          version: '22.3'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
 #          components: 'native-image' # add when starting native builds.
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -248,9 +248,9 @@ jobs:
         if: ${{ needs.parameters.outputs.jdk_build != '8' }}
         uses: graalvm/setup-graalvm@v1
         with:
-          version: '22.3'
+#          version: '22.3'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-          #          components: 'native-image' # add when starting native builds.
+#          components: 'native-image' # add when starting native builds.
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
         run: sudo apt-get install -q -y xsltproc
@@ -310,9 +310,9 @@ jobs:
         if: ${{ needs.parameters.outputs.jdk_build != '8' }}
         uses: graalvm/setup-graalvm@v1
         with:
-          version: '22.3'
+#          version: '22.3'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-          #          components: 'native-image' # add when starting native builds.
+#          components: 'native-image' # add when starting native builds.
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
         run: sudo apt-get install -q -y xsltproc
@@ -373,9 +373,9 @@ jobs:
         if: ${{ needs.parameters.outputs.jdk_build != '8' }}
         uses: graalvm/setup-graalvm@v1
         with:
-          version: '22.3'
+#          version: '22.3'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
-          #          components: 'native-image' # add when starting native builds.
+#          components: 'native-image' # add when starting native builds.
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
         run: sudo apt-get install -q -y xsltproc
