--- a/stream-applications-build/pom.xml
+++ b/stream-applications-build/pom.xml
@@ -46,9 +46,9 @@
 		<spring-geode.version>1.6.7</spring-geode.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 		<spring-cloud-starters.version>3.1.3</spring-cloud-starters.version>
-		<spring-cloud-function.version>3.2.5</spring-cloud-function.version>
-		<spring-cloud-stream-dependencies.version>3.2.4</spring-cloud-stream-dependencies.version>
-		<spring-cloud-stream.version>3.2.4</spring-cloud-stream.version>
+		<spring-cloud-function.version>3.2.8-SNAPSHOT</spring-cloud-function.version>
+		<spring-cloud-stream-dependencies.version>3.2.6-SNAPSHOT</spring-cloud-stream-dependencies.version>
+		<spring-cloud-stream.version>3.2.6-SNAPSHOT</spring-cloud-stream.version>
 		<test-containers.version>1.16.3</test-containers.version>
 		<maven-flatten-plugin.version>1.2.5</maven-flatten-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
