--- a/.github/workflows/clean-housekeeping.yml
+++ b/.github/workflows/clean-housekeeping.yml
@@ -10,7 +10,7 @@ jobs:
       group: housekeeping
       cancel-in-progress: false
     steps:
-      - name: 'Configure: Checkout scdf-pro'
+      - name: 'Configure: Checkout stream-applications'
         uses: actions/checkout@v3
         with:
           ref: 'main'
