--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -185,9 +185,7 @@ jobs:
 #          components: 'native-image' # add when starting native builds.
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install -q -y xsltproc
+        uses: ./.github/actions/install-xsltproc
       - name: 'Action: build initial dependencies'
         shell: bash
         env:
@@ -252,7 +250,7 @@ jobs:
 #          components: 'native-image' # add when starting native builds.
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
-        run: sudo apt-get install -q -y xsltproc
+        uses: ./.github/actions/install-xsltproc
       - name: 'Configure: Install Pack'
         uses: ./.github/actions/install-pack
       - name: 'Configure: Docker login'
@@ -314,7 +312,7 @@ jobs:
 #          components: 'native-image' # add when starting native builds.
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
-        run: sudo apt-get install -q -y xsltproc
+        uses: ./.github/actions/install-xsltproc
       - name: 'Configure: Install Pack'
         uses: ./.github/actions/install-pack
       - name: 'Configure: Docker login'
@@ -372,12 +370,12 @@ jobs:
         if: ${{ needs.parameters.outputs.jdk_build != '8' }}
         uses: graalvm/setup-graalvm@v1
         with:
-#          version: '22.3'
+          version: 'latest'
           java-version: ${{ needs.parameters.outputs.jdk_build }}
 #          components: 'native-image' # add when starting native builds.
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Configure: Install xsltproc'
-        run: sudo apt-get install -q -y xsltproc
+        uses: ./.github/actions/install-xsltproc
       - name: 'Configure: Install Pack'
         uses: ./.github/actions/install-pack
       - name: 'Configure: Docker login'
