[GitHub Actions] Fix install pack

--- a/.github/actions/install-pack/action.yml
+++ b/.github/actions/install-pack/action.yml
@@ -6,4 +6,4 @@ runs:
   steps:
     - name: 'Install Pack'
       shell: bash
-      run: (curl -sSL "https://github.com/buildpacks/pack/releases/download/v0.27.0/pack-v0.27.0-linux.tgz" | tar -C /usr/local/bin/ --no-same-owner -xzv pack)
+      run: (curl -sSL "https://github.com/buildpacks/pack/releases/download/v0.27.0/pack-v0.27.0-linux.tgz" | sudo tar -C /usr/local/bin/ --no-same-owner -xzv pack)
